--- a/app/globals.css
+++ b/app/globals.css
@@ -43,11 +43,11 @@
   }
 
   .user-card_avatar {
-    @apply flex flex-1 items-start justify-start gap-3 xs:items-center;
+    @apply flex flex-1 items-start bg-dark-3 rounded-lg p-2 justify-start gap-3 xs:items-center;
   }
 
   .user-card_btn {
-    @apply h-auto min-w-[74px] rounded-lg bg-primary-500 text-[12px] text-light-1 !important;
+    @apply h-auto min-w-[74px] rounded-lg bg-blue text-[12px] text-light-1 !important;
   }
 
   .searchbar {
